[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Food/ChopPoint.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="Animation" id=2]
resource_name = "Despawn"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 50.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0.0, 50.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_enable_chop"
} ]
}

[node name="ChopPoint" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
radius = 0.01

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Despawn = SubResource( 2 )
anims/Spawn = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="input_event" from="." to="." method="_on_ChopPoint_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
